# idl-program

programs/metadata-program/: Cargo.toml
programs/metadata-program/src/: lib.rs
tests/: upload-metadata-and-idl.ts
